# qbouncer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
config/: qbouncer.toml.example
scripts/: install.sh  uninstall.sh
src/qbouncer/: __init__.py  __main__.py  config.py  exceptions.py  killswitch.py  natpmp.py  qbittorrent.py  service.py  wireguard.py
systemd/: qbouncer.service
